# ppcwiz-submitter

./: README.rst  dockerfile  main.py  pyproject.toml  requirements.txt
crawler/: __init__.py  alembic.ini  settings.py
crawler/brands/: __init__.py  client.py  enums.py  models.py  views.py
crawler/brands/tasks/: ad_group.py  campaign.py  keyword.py  keyword_report.py  neg_keyword.py  target_report.py
crawler/common/: __init__.py  enums.py  factory.py  models.py  networks.py
crawler/common/tasks/: profile.py
crawler/display/: __init__.py  client.py  enums.py  models.py  views.py
crawler/display/tasks/: ad_group.py  campaign.py  neg_target.py  product_ad.py  product_ad_report.py  target.py  target_report.py
crawler/migration/: env.py
crawler/migration/versions/: c72ab1c90ba1_create_filter_tables.py  e68c6dd31913_initiate_all_tables.py
crawler/migration/versions_tmp/: 21fee1e12b08_some_message.py  27ce605ae722_create_asin_filter_tables.py  751f7696f67b_create_another_filter_tables.py  98385b24bbac_create_saved_column.py  b36d96b3e3a2_add_saved_column.py  c72ab1c90ba1_create_filter_tables.py  c9ac71214163_create_asin_filter_tables.py
crawler/products/: client.py  enums.py  models.py  views.py
crawler/products/tasks/: ad_group.py  camp_neg_keyword.py  campaign.py  keyword.py  keyword_report.py  neg_keyword.py  neg_target.py  product_ad.py  product_ad_report.py  target.py  target_report.py
crawler/util/: utils.py
