[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
loguru = "^0.5.3"
python-dotenv = "^0.15.0"
SQLAlchemy = "^1.3.23"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
APScheduler = "^3.7.0"
pytz = "^2021.1"
alembic = "^1.5.7"
mysqlclient = "^2.0.3"
aiohttp = "^3.7.4"
cchardet = "^2.1.7"
aiodns = "^2.0.0"
ujson = "^4.0.2"
aiofiles = "^0.6.0"
uvloop = "^0.15.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
